# doppelganger

./: .gitignore  CLAUDE.md  Makefile  README.md
docs/: Makefile  README.md  pyproject.toml
docs/src/: base_diagram.py  main.py
docs/src/diagram_generators/: __init__.py  components_architecture.py  high_level_architecture.py  test_diagram.py
k8s/: namespace.yaml  setup.sh
k8s/deployments/: example-service-v1.yaml  example-service-v2.yaml  kafka-simple.yaml  kafka-ui.yaml  kafka.yaml  monitor.yaml
k8s/envoy/: envoy-config.yaml  envoy-deployment.yaml  envoy.yaml
k8s/istio/: destination-rule.yaml  gateway.yaml  telemetry.yaml  virtual-service.yaml
k8s/services/: example-service-v1.yaml  example-service-v2.yaml  monitor.yaml
k8s/storage/: postgres-deployment.yaml  redis-deployment.yaml
src/: docker-compose.yml
src/example_service_v1/: Cargo.toml  Dockerfile
src/example_service_v1/src/: v1.rs
src/example_service_v2/: Dockerfile  go.mod
src/example_service_v2/src/: main.go
src/monitor/: Cargo.toml  Dockerfile
src/monitor/src/: main.rs
src/relay/: Cargo.toml  Dockerfile  schema.sql
src/relay/src/: main.rs
