[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["diagrams>=0.24.4"]

[dependency-groups]
dev = ["ruff>=0.13.1"]

[tool.pytest.ini_options]
pythonpath = ["src/"]
addopts = "-v -ra"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"

