[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monitor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
rdkafka = { version = "0.36", features = ["tokio"] }

# Database dependencies (uncomment when implementing storage)
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
# redis = { version = "0.24", features = ["tokio-comp"] }